package com.assignment.dp;

public class BrandABulb extends AbstractBulb {
    public BrandABulb() { super("BrandA"); }
    // Inherits default factory-method behavior (plain integer file)
}
