package com.assignment.dp;

public class BrandALock extends AbstractLock {
    public BrandALock() { super("BrandA"); }
    // Inherits default factory-method behavior (plain integer file)
}
