package com.assignment.dp;

public interface SmartDeviceFactory {
    SmartBulb createBulb();
    SmartLock createLock();
}
